# project3

./: .gitignore  modal_train.py  pyproject.toml  run_experiment.py  server_cli.py  starter_hw3.ipynb  train_teacher_head.py  upload_dataset.py
configs/: default.yaml
configs/distillation/: logit_default.yaml  logit_hard.yaml  logit_soft.yaml
configs/model/: mobilenet_v2.yaml  shufflenet_base.yaml  shufflenet_large.yaml
configs/training/: default.yaml  fast.yaml  long.yaml
docs/: KNOWLEDGE_DISTILLATION_CHALLENGE.md  PROJECT_DESCRIPTION.md  THEORY_AND_IMPLEMENTATION.md
infrastructure/: __init__.py  data.py  database.py  distillation.py  server.py  training.py
models/: __init__.py  efficientnet.py  mobilenet.py  shufflenet.py  tta_wrapper.py
