[project]
name = "project3-knowledge-distillation"
version = "0.1.0"
description = "Knowledge distillation for AI dermatologist - HW3"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    "huggingface-hub>=0.16.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "pydantic>=2.0.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "modal>=1.2.4",
]

[tool.hatch.build.targets.wheel]
packages = ["infrastructure", "models"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",
]

